syntax = "proto3";

import "common/v1/common.proto";
import "google/api/annotations.proto";

package user.v1;

option go_package = "github.com/HeyReyHR/twitch-clone/shared/pkg/proto/user/v1;user_v1";

service UserService {
  rpc Register(RegisterRequest) returns(RegisterResponse) {
    option (google.api.http) = {
      post: "/api/v1/users/register"
      body: "*"
    };
  };

  rpc GetUser(GetUserRequest) returns(GetUserResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/{user_id}"
    };
  };

  rpc Update(UpdateRequest) returns(UpdateResponse){
    option (google.api.http) = {
      patch: "/api/v1/users/{user_id}"
    };
  }

  rpc RegenerateStreamKey(RegenerateStreamKeyRequest) returns (RegenerateStreamKeyResponse){
    option (google.api.http) = {
      patch: "/api/v1/users/stream_key/{user_id}"
    };
  };

  rpc GetUserViaStreamKey(GetUserViaStreamKeyRequest) returns (GetUserViaStreamKeyResponse);
}

// Register
message RegisterRequest{
  string username = 1;
  string email = 2;
  string password = 3;
  string password_confirmation = 4;
  common.v1.Role role = 5;
}

// Register
message RegisterResponse{
  string user_id = 1;
}

// GetUser
message GetUserRequest{
  string user_id = 1;
}

// GetUser
message GetUserResponse {
  common.v1.User user = 1;
}

// UpdateUser
message UpdateRequest {
  string user_id = 1;
  optional string username = 2;
  optional string email = 3;
  optional bytes avatar = 4;
  optional string avatar_content_type = 5;
  optional bool is_streaming = 6;
}

// UpdateUser
message UpdateResponse {}

// RegenerateStreamKey
message RegenerateStreamKeyRequest {
  string user_id = 1;
}

// RegenerateStreamKey
message RegenerateStreamKeyResponse {
  string stream_key = 1;
}

// GetUserViaStreamKey
message GetUserViaStreamKeyRequest{
  string stream_key = 1;
}

// GetUserViaStreamKey
message GetUserViaStreamKeyResponse{
  common.v1.User user = 1;
}

